Added ECC Support. Changed how generated public keys are handled.  They are now simply marshaled out when generated and are not stored. If you need to store them simply write them back to the card. Applied Google formatting.

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,19 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# JavaCardIDE Files
+.javacard
+.libraryCache
+.settings/*
+bin/*
+
+# IntelliJ Files
+.idea
+*.iml
+.metadata
+
+.jcop
+
+vendor_libs/*
+/.apt_generated/
